<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>app</name>
  <version>0.0.0</version>
  <description>Integration and unit testing examples</description>
  <maintainer email="mail@arnebaeyens.com">Arne Baeyens</maintainer>
  <author email="mail@arnebaeyens.com">Arne Baeyens</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <!-- unit tests -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>
  <!-- integration tests -->
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>testjob_coordinator</test_depend>
  <test_depend>turtlesim</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
